<resources>
    <string name="app_name">Boom Board</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="press_again_exit">Press Again To Exit!</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_new">What\'s New</string>
    <string name="all_on_board">All Notices On Board</string>
    <string name="timetable">Timetable</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="choose_faculty">Choose Faculty</string>
    <string name="faculty">Faculty</string>
    <string name="choose_year">Choose Year</string>
    <string name="year_of_study">Year Of Study</string>
    <string name="update_faculty_details">Update Faculty Details</string>
    <string name="choose_college">Choose College</string>
    <string name="cive_ful"><![CDATA[College of Informatics & Virtual Education]]></string>
    <string name="refresh">Refresh</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="third_year">Third Year</string>
    <string name="fourth_year">Fourth Year</string>
    <string name="fifth_year">Fifth Year</string>
    <string name="college">College</string>
    <string name="unspecified">Unspecified</string>
    <string name="year">Year</string>
    <string name="welcome_note">Boom Board would like you to set up your profile.\n\nThis will help improving your experience while using the app.</string>
    <string name="web_client_id">787287160683-ermsok5jgs59qkb188rns4rbcac3hkpe.apps.googleusercontent.com</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="update_profile">Update Profile</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="using_google_account">Using Google Account</string>
    <string name="choose_sign_in_method">Choose a sign in method</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Signing In</string>
    <string name="please_wait">Please Wait</string>
    <string name="sorry_error_try_again">Sorry, an error has occurred. Please try again</string>
    <string name="welcome_to_boom_board">Welcome To Boom Board</string>
    <string name="sign_out_qn">Sign out of Boom Board?</string>
    <string name="device_offline_turn_on_internet">Device is offline! Please turn on the internet.</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint">Hint</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading">Loading....</string>

</resources>
