<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navGroupMain"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navWhatsNew"
            android:checked="true"
            android:icon="@drawable/ic_whats_hot"
            android:title="@string/what_s_new" />
        <item
            android:id="@+id/navAllOnBoard"
            android:icon="@drawable/ic_book_open_page"
            android:title="@string/all_on_board" />

        <item
            android:id="@+id/navTimetable"
            android:checkable="false"
            android:icon="@drawable/ic_timetable"
            android:title="@string/timetable" />
    </group>

    <group
        android:id="@+id/navGroupAbout"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/profile" />

        <item
            android:id="@+id/navAbout"
            android:checkable="false"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>