<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerFaculty"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"

        app:ms_alignLabels="true"
        app:ms_arrowColor="@color/color_accent_blue"
        app:ms_arrowSize="12dp"
        app:ms_baseColor="@color/color_accent_blue"
        app:ms_enableFloatingLabel="true"
        app:ms_floatingLabelColor="@color/color_accent_blue"
        app:ms_floatingLabelText="@string/faculty"
        app:ms_highlightColor="@color/color_primary_amber"
        app:ms_hint="@string/choose_faculty"
        app:ms_hintColor="@color/color_secondary_text"
        app:ms_multiline="false"
        app:ms_thickness="1dp" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerYear"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/spinnerFaculty"
        android:layout_below="@id/spinnerFaculty"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"

        app:ms_arrowColor="@color/color_accent_blue"
        app:ms_arrowSize="12dp"
        app:ms_baseColor="@color/color_accent_blue"
        app:ms_enableFloatingLabel="true"
        app:ms_floatingLabelColor="@color/color_accent_blue"
        app:ms_floatingLabelText="@string/year_of_study"
        app:ms_highlightColor="@color/color_primary_amber"
        app:ms_hint="@string/year"
        app:ms_hintColor="@color/color_secondary_text"
        app:ms_multiline="false"
        app:ms_thickness="1dp" />

</RelativeLayout>