<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_pale_white">

    <RelativeLayout
        android:id="@+id/layoutNameEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardDp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"

            app:cardBackgroundColor="@color/color_accent_blue"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageProfileDp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:tint="@color/color_white" />
        </android.support.v7.widget.CardView>


        <creationsofali.boomboard.appfonts.HindTextView
            android:id="@+id/textProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/cardDp"
            android:text="Student Name"
            android:textColor="@color/color_secondary_text"
            android:textSize="20sp" />

        <creationsofali.boomboard.appfonts.HindTextView
            android:id="@+id/textProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/textProfileName"
            android:layout_below="@id/textProfileName"
            android:text="studentname@gmail.com"
            android:textColor="@color/color_primary_text"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutNameEmail"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/iconCollege"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:alpha="0.8"
                android:src="@drawable/ic_temple"
                android:tint="@color/color_accent_blue" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textCollegeAbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconCollege"
                android:text="CIVE"
                android:textColor="@color/color_secondary_text"
                android:textSize="20sp" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textCollegeFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/textCollegeAbr"
                android:layout_below="@id/textCollegeAbr"
                android:text="@string/cive_ful"
                android:textColor="@color/color_primary_text"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iconFaculty"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:alpha="0.8"
                android:src="@drawable/ic_graduation_hat"
                android:tint="@color/color_accent_blue" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textFacultyAbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconFaculty"
                android:text="BScSE"
                android:textColor="@color/color_secondary_text"
                android:textSize="20sp" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textFacultyFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/textFacultyAbr"
                android:layout_below="@id/textFacultyAbr"
                android:text="Bachelor of Science in Software Engineering"
                android:textColor="@color/color_primary_text"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iconYear"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:alpha="0.8"
                android:src="@drawable/ic_calendar_text"
                android:tint="@color/color_accent_blue" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textYearAbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconYear"
                android:text="@string/year_of_study"
                android:textColor="@color/color_secondary_text"
                android:textSize="20sp" />

            <creationsofali.boomboard.appfonts.HindTextView
                android:id="@+id/textYearFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/textYearAbr"
                android:layout_below="@id/textYearAbr"
                android:text="Second Year"
                android:textColor="@color/color_primary_text"
                android:textSize="13sp" />
        </RelativeLayout>

        <creationsofali.boomboard.appfonts.HindTextView
            android:id="@+id/textRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:paddingBottom="4dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:text="@string/refresh"
            android:textColor="@color/selector_color_blue_white"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/fabEditProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_button_stroke_red"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/selector_color_red_white"
        android:textSize="13sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/layoutProfile"
        android:layout_margin="24dp"
        android:src="@drawable/ic_account_edit"
        android:tint="@color/selector_color_red_white"

        app:backgroundTint="#FFFF"
        app:elevation="2dp"
        app:fabSize="mini"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/color_red" />
</RelativeLayout>
